[gd_scene load_steps=5 format=2]

[ext_resource path="res://Acessories/Weapons_sprites/Rocket.png" type="Texture" id=1]
[ext_resource path="res://Acessories/Weapon_bullet/Rocket_Bullet/Rockets.gd" type="Script" id=2]
[ext_resource path="res://Acessories/Weapon_bullet/Rocket_Bullet/Rocket_trail.tscn" type="PackedScene" id=3]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19.0753, 10.5645 )

[node name="Rocket" type="Area2D"]
rotation = 1.5708
scale = Vector2( 0.75, 0.75 )
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}

[node name="Rocket" type="Sprite" parent="."]
rotation = -1.5708
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
rotation = -1.5708
shape = SubResource( 1 )

[node name="Rocket_trail" parent="." instance=ExtResource( 3 )]
z_index = -2
width = 15.0
width_curve = null
default_color = Color( 0.4, 0.501961, 1, 1 )

[node name="Timer" type="Timer" parent="."]
wait_time = 10.0
autostart = true

[node name="Self_Timer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[connection signal="body_entered" from="." to="." method="_on_Rocket_body_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Self_Timer" to="." method="_on_Self_Timer_timeout"]
